# NCBI-TOOL

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py  test_server.py
ncbi_mcp_server/: ncbi_client.py  server.py
