[project]
name = "ncbi-mcp-server"
version = "0.1.0"
description = "MCP server for NCBI E-utilities and BLAST tools"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.1.0",
    "httpx>=0.25.0",
    "biopython>=1.81",
    "xmltodict>=0.13.0",
    "pydantic>=2.0.0",
    "ruff>=0.11.13",
]

[project.scripts]
ncbi-mcp-server = "ncbi_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 
